testing: convert ctest to use singular script for tcl and python
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/ant/test/CMakeLists.txt
+++ b/src/ant/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "ant"
+  TESTS
     ant_check
     ant_report
     check_api1
@@ -11,7 +11,3 @@ set(TEST_NAMES
 # Skipped
 #ant_man_tcl_check
 #ant_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("ant" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
