--- a/src/dpo/test/CMakeLists.txt
+++ b/src/dpo/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "dpo"
+  TESTS
     aes
     blockage1
     gcd
@@ -10,7 +10,3 @@ set(TEST_NAMES
     regions1
     regions2
 )
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("dpo" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
