--- a/src/drt/test/CMakeLists.txt
+++ b/src/drt/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "drt"
+  TESTS
     drc_test
     ispd18_sample
     ispd18_sample_incr
@@ -12,12 +12,10 @@ set(TEST_NAMES
     ta_pin_aligned
     top_level_term
     top_level_term2
+  PASSFAIL_TESTS
+    gc_test
 )
 
 # Skipped
 #drt_man_tcl_check
 #drt_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("drt" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
