--- a/src/mpl2/test/CMakeLists.txt
+++ b/src/mpl2/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "mpl2"
+  TESTS
     macro_only
     no_unfixed_macros
 )
@@ -8,9 +8,5 @@ set(TEST_NAMES
 # Skipped
 #mpl2_man_tcl_check
 #mpl2_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("mpl2" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
 
 add_subdirectory(cpp)
