--- a/src/rmp/test/CMakeLists.txt
+++ b/src/rmp/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "rmp"
+  TESTS
     blif_reader
     blif_reader_const
     blif_reader_sequential
@@ -16,10 +16,6 @@ set(TEST_NAMES
 # Skipped
 #rmp_man_tcl_check
 #rmp_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("rmp" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
 
 if (ENABLE_TESTS)
     add_subdirectory(cpp)
