--- a/src/rsz/test/CMakeLists.txt
+++ b/src/rsz/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "rsz"
+  TESTS
     buffer_ports1
     buffer_ports3
     buffer_ports4
@@ -127,14 +127,12 @@ set(TEST_NAMES
     set_dont_touch1
     set_dont_use1
     split_load_hier
+  PASSFAIL_TESTS
+    cpp_tests
 )
 
 # Skipped
 #rsz_man_tcl_check
 #rsz_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("rsz" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
 
 add_subdirectory(cpp)
