--- a/src/utl/test/CMakeLists.txt
+++ b/src/utl/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "utl"
+  TESTS
     logger_max_messages
     logger_redirection
     logger_redirection_nonewline
@@ -10,15 +10,13 @@ set(TEST_NAMES
     test_info
     test_metrics
     test_suppress_message
+  PASSFAIL_TESTS
+    cpp_tests
 )
 
 # Skipped
 #test_error_exception
 #utl_man_tcl_check
 #utl_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("utl" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
 
 add_subdirectory(cpp)
