--- a/src/grt/test/CMakeLists.txt
+++ b/src/grt/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "grt"
+  TESTS
     bus_route
     clock_route
     clock_route_alpha
@@ -81,7 +81,3 @@ set(TEST_NAMES
 # Skipped
 #grt_man_tcl_check
 #grt_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("grt" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
