--- a/src/gui/test/CMakeLists.txt
+++ b/src/gui/test/CMakeLists.txt
@@ -1,13 +1,9 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "gui"
+  TESTS
     supported
 )
 
 # Skipped
 #gui_man_tcl_check
 #gui_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("gui" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
