--- a/src/par/test/CMakeLists.txt
+++ b/src/par/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "par"
+  TESTS
     partition_gcd
     read_part
 )
@@ -8,7 +8,3 @@ set(TEST_NAMES
 # Skipped
 #par_man_tcl_check
 #par_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("par" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
