--- a/src/rcx/test/CMakeLists.txt
+++ b/src/rcx/test/CMakeLists.txt
@@ -1,18 +1,16 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "rcx"
+  TESTS
     45_gcd
     ext_pattern
     gcd
     generate_pattern
     names
+  PASSFAIL_TESTS
+    rcx_unit_test
 )
 
 # Skipped
 #generate_rules
 #rcx_man_tcl_check
 #rcx_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("rcx" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
