--- a/src/stt/test/CMakeLists.txt
+++ b/src/stt/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "stt"
+  TESTS
     check
     flute1
     flute_gcd
@@ -13,7 +13,3 @@ set(TEST_NAMES
 # Skipped
 #stt_man_tcl_check
 #stt_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("stt" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
