--- a/src/upf/test/CMakeLists.txt
+++ b/src/upf/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-include("openroad")
-
-set(TEST_NAMES
+or_integration_tests(
+  "upf"
+  TESTS
     levelshifter
     write
 )
@@ -8,7 +8,3 @@ set(TEST_NAMES
 # Skipped
 #upf_man_tcl_check
 #upf_readme_msgs_check
-
-foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("upf" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
-endforeach()
