upf: cmake align
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/upf/test/CMakeLists.txt
+++ b/src/upf/test/CMakeLists.txt
@@ -1,10 +1,14 @@
 include("openroad")
 
 set(TEST_NAMES
-    upf_test
     levelshifter
+    write
 )
 
+# Skipped
+#upf_man_tcl_check
+#upf_readme_msgs_check
+
 foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("upf" ${TEST_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/regression)
+    or_integration_test("upf" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
