--- a/src/stt/test/CMakeLists.txt
+++ b/src/stt/test/CMakeLists.txt
@@ -10,6 +10,10 @@ set(TEST_NAMES
     pd_gcd
 )
 
+# Skipped
+#stt_man_tcl_check
+#stt_readme_msgs_check
+
 foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("stt" ${TEST_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/regression)
+    or_integration_test("stt" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
