rmp: cmake align
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/rmp/test/CMakeLists.txt
+++ b/src/rmp/test/CMakeLists.txt
@@ -13,8 +13,12 @@ set(TEST_NAMES
     blif_reader_sequential
 )
 
+# Skipped
+#rmp_man_tcl_check
+#rmp_readme_msgs_check
+
 foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("rmp" ${TEST_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/regression)
+    or_integration_test("rmp" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
 
 if (ENABLE_TESTS)
