--- a/src/fin/test/CMakeLists.txt
+++ b/src/fin/test/CMakeLists.txt
@@ -4,6 +4,10 @@ set(TEST_NAMES
     gcd_fill
 )
 
+# Skipped
+#fin_man_tcl_check
+#fin_readme_msgs_check
+
 foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("fin" ${TEST_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/regression)
+    or_integration_test("fin" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
