dft: cmake aling
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/dft/test/CMakeLists.txt
+++ b/src/dft/test/CMakeLists.txt
@@ -2,17 +2,24 @@
 include("openroad")
 
 set(TEST_NAMES
-  one_cell_sky130
-  one_cell_nangate45
-  sub_modules_sky130
-  scan_architect_no_mix_sky130
-  scan_architect_clock_mix_sky130
-  place_sort_sky130
-  max_chain_count_sky130
+    one_cell_sky130
+    one_cell_nangate45
+    sub_modules_sky130
+    place_sort_sky130
+    scan_architect_no_mix_sky130
+    scan_architect_clock_mix_sky130
+    scan_architect_register_bank_no_clock_mix_sky130
+    scandef_sky130
+    scandef_core_sky130
+    max_chain_count_sky130
 )
 
+# Skipped
+#dft_man_tcl_check
+#dft_readme_msgs_check
+
 foreach(TEST_NAME IN LISTS TEST_NAMES)
-  or_integration_test("dft" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
+    or_integration_test("dft" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
 
 find_package(Boost)
