--- a/src/gpl/test/CMakeLists.txt
+++ b/src/gpl/test/CMakeLists.txt
@@ -1,42 +1,45 @@
 include("openroad")
 
 set(TEST_NAMES
-  simple01
-  simple01-obs
-  simple01-td
-  simple01-td-tune
-  simple01-uniform
-  simple01-ref
-  simple01-skip-io
-  simple01-rd
-  simple02-rd
-  simple03-rd
-  simple04-rd
-  simple02
-  simple03
-  simple04
-  simple05
-  simple06
-  simple07
-  simple08
-  simple09
-  simple10
-  core01
-  ar01
-  ar02
-  incremental01
-  incremental02
-  error01
-  diverge01
-  density01
-  convergence01
-  nograd01
-  clust01
-#  clust02
+    simple01
+    simple01-obs
+    simple01-td
+    simple01-td-tune
+    simple01-uniform
+    simple01-ref
+    simple01-skip-io
+    simple01-rd
+    simple02-rd
+    simple03-rd
+    simple04-rd
+    simple02
+    simple03
+    simple04
+    simple05
+    simple06
+    simple07
+    simple08
+    simple09
+    simple10
+    core01
+    ar01
+    ar02
+    incremental01
+    incremental02
+    error01
+    diverge01
+    density01
+    convergence01
+    nograd01
+    clust01
 )
 
+# Skipped
+#gpl_man_tcl_check
+#gpl_readme_msgs_check
+
 foreach(TEST_NAME IN LISTS TEST_NAMES)
-  or_integration_test("gpl" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
+    or_integration_test("gpl" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
 
 add_executable(fft_test fft_test.cc)
