--- a/src/drt/test/CMakeLists.txt
+++ b/src/drt/test/CMakeLists.txt
@@ -2,6 +2,7 @@ include("openroad")
 
 set(TEST_NAMES
     ispd18_sample
+    ispd18_sample_incr
     ndr_vias1
     ndr_vias2
     obstruction
@@ -13,6 +14,10 @@ set(TEST_NAMES
     drc_test
 )
 
+# Skipped
+#drt_man_tcl_check
+#drt_readme_msgs_check
+
 foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("drt" ${TEST_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/regression)
+    or_integration_test("drt" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
