odb: cmake align
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/odb/test/CMakeLists.txt
+++ b/src/odb/test/CMakeLists.txt
@@ -20,6 +20,7 @@ set(TEST_NAMES
     dump_nets
     lef_mask
     write_lef_and_def
+    write_lef_polygon
     lef_data_access
     gcd_def_access
     gcd_pdn_def_access
@@ -39,10 +40,22 @@ set(TEST_NAMES
     write_macro_placement
     smash_vias
     floorplan_initialize
+    replace_design1
+    replace_design2
+    replace_design3
+    design_is_routed1
+    design_is_routed2
+    design_is_routed3
+    design_is_routed_fail1
+    design_is_routed_fail2
 )
 
+# Skipped
+#odb_man_tcl_check
+#odb_readme_msgs_check
+
 foreach(TEST_NAME IN LISTS TEST_NAMES)
-    or_integration_test("odb" ${TEST_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/regression)
+    or_integration_test("odb" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
 
 add_subdirectory(cpp)
