cts: cmake align
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/cts/test/CMakeLists.txt
+++ b/src/cts/test/CMakeLists.txt
@@ -7,29 +7,37 @@
 include("openroad")
 
 set(TEST_NAMES
-    check_buffers
-    check_buffers_blockages
-    check_charBuf
-    find_clock
-    find_clock_pad
-    no_clocks
-    no_sinks
-    simple_test
-    simple_test_clustered
-    simple_test_clustered_max_cap
-    check_wire_rc_cts
-    post_cts_opt
-    balance_levels
-    max_cap
+    simple_test_hier
     array
     array_no_blockages
     array_ins_delay
-    insertion_delay    
+    balance_levels
+    check_buffers
+    check_buffers_blockages
+    check_charBuf
+    check_max_fanout1
+    check_max_fanout2
+    check_wire_rc_cts
     dummy_load
+    find_clock
+    find_clock_pad
+    insertion_delay
+    max_cap
+    no_clocks
+    no_sinks
+    post_cts_opt
+    simple_test
+    simple_test_clustered
+    simple_test_clustered_max_cap
+    lvt_lib
 )
 
+# Skipped
+#cts_readme_msgs_check
+#cts_man_tcl_check
+
 foreach(TEST_NAME IN LISTS TEST_NAMES)
-  or_integration_test("cts" ${TEST_NAME}  ${CMAKE_CURRENT_SOURCE_DIR}/regression)
+    or_integration_test("cts" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
 endforeach()
 
 add_executable(cts_unittest cts_unittest.cc)
