ord: add missing CMakeLists to /tests
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,6 +168,7 @@ if(ENABLE_TESTS)
 endif()
 
 add_subdirectory(src)
+add_subdirectory(test)
 
 # After all compiled, look for the respective flags
 target_compile_definitions(openroad PRIVATE GPU)
