--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,13 +4,11 @@ set(TEST_NAMES
     timing_api
     timing_api_2
     timing_api_3
+    timing_api_4
     upf_test
     upf_aes
     two_designs
 )
-
-# Skipped
-#timing_api_4
 
 foreach(TEST_NAME IN LISTS TEST_NAMES)
     or_integration_test("openroad" ${TEST_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/regression)
