--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -3,7 +3,7 @@ option(BUILD_GUI "Build the GUI" ON)
 
 # If Qt is not installed there will not be cmake
 # support for the package so this needs to be "quiet".
-find_package(Qt5 QUIET COMPONENTS Core Widgets OPTIONAL_COMPONENTS Charts)
+find_package(Qt5 QUIET COMPONENTS Core Widgets Charts)
 
 include("openroad")
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -23,18 +23,6 @@ if (Qt5_FOUND AND BUILD_GUI)
            SCRIPTS   src/gui.tcl
            RUNTIME_HEADER tclSwig.h
   )
-
-  if (TARGET Qt5::Charts)
-    message(STATUS "Charts widget is enabled")
-
-    target_compile_definitions(gui PRIVATE ENABLE_CHARTS)
-
-    list(APPEND CHARTS_LIB
-      "Qt5::Charts"
-    )
-  else()
-    message(STATUS "Charts widget is not enabled")
-  endif()
 
   set_property(SOURCE ${GUI_WRAP} PROPERTY SKIP_AUTOMOC ON)
 
@@ -84,7 +72,7 @@ if (Qt5_FOUND AND BUILD_GUI)
     PRIVATE
       Qt5::Core
       Qt5::Widgets
-      ${CHARTS_LIB}
+      Qt5::Charts
       utl
       Boost::boost
   )
