rsz: Fix net usage check in eliminate_dead_logic
Include test by Peter.

Co-authored-by: Peter Gadfort <peter.gadfort@gmail.com>
Signed-off-by: Martin Povišer <povik@cutebit.org>

--- a/src/rsz/test/CMakeLists.txt
+++ b/src/rsz/test/CMakeLists.txt
@@ -12,6 +12,7 @@ set(TEST_NAMES
     clone_flat
     clone_hier
     eliminate_dead_logic1
+    eliminate_dead_logic2
     eqy_repair_setup2
     eqy_repair_setup5
     fanin_fanout1
