rsz: add report_dont_* commands
Signed-off-by: Peter Gadfort <peter.gadfort@gmail.com>

--- a/src/rsz/test/CMakeLists.txt
+++ b/src/rsz/test/CMakeLists.txt
@@ -114,6 +114,8 @@ set(TEST_NAMES
     repair_wire9
     repair_wire10
     repair_wire11
+    report_dont_touch
+    report_dont_use
     report_floating_nets1
     report_floating_nets2
     report_floating_nets3
